# IvyCompositor

./: CMakeLists.txt
include/: cursor.h  fwd.h  input.h  keyboard.h  layer_surface.h  output.h  popup.h  server.h  top_level.h  types.h
src/: cursor.c  input.c  keyboard.c  layer_surface.c  main.c  output.c  popup.c  server.c  top_level.c
src/top_level/: common.c  common.h  decoration.c  xdg.c  xwayland.c
